--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="fab">Favourite</string>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCDV-5eaybDUkdoQ9JxUdDm515BXwu4WnU</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB-0u5jx8KgklxLgFddtDFALvqMRlPHyLw</string>
+    <string name="weather_services">Weather Services</string>
 </resources>
